2011-04-20  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed appending timecode calculation for
	appended subtitle tracks if the subtitle tracks are read from
	complex containers (e.g. Matroska, MP4, AVI etc). Fix for bug 620.

2011-04-15  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: Fixed extraction of MPEG-1/2 video tracks
	whose sequence headers change mid-stream but whose key frames are
	not all prefixed with a sequence header. Fix for bug 556.

	* mkvmerge: bug fix: Fixed reading AAC tracks from AVI files with
	7 bytes long codec data. Fix for bug 613.

	* mkvmerge: enhancement: Added support for WAV and AVI files that
	use a WAVEFORMATEXTENSIBLE structure (wFormatTag == 0xfffe). Fix
	for bug 614.

2011-04-14  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: The output file name extension will be updated on
	each track selection changed as well. The extension is based on
	the actually selected tracks, not on the presence of tracks of
	certain types. Fix for bug 615.

2011-04-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: mkvmerge was dropping the last full DTS
	packet from a DTS files if that file was not encoded in "14-in-16"
	mode and if the file size was not divisible by 16.

2011-03-23  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed huge slowdown when splitting by size is
	active with certain kinds of input files. Fix for bug 611.

	* mkvinfo: bug fix: Fixed redirecting the output into a file with
	"--redirect-output"/"-r" and verbosity levels of 2 and higher.

	* mkvpropedit, mmg header/chapter editor: bug fix: Fixed parsing
	Matroska files if mkvtoolnix is compiled with newer versions of
	libebml/libmatroska (SVN revisions after the releases of libebml
	1.2.0/libmatroska 1.1.0).

2011-03-14  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: WAV files with unsupported format tags are
	rejected instead of being treated like containing PCM. Fix for bug
	610.
