@@ -29,8 +29,9 @@ m4_include(ac/nl_langinfo.m4)
 m4_include(ac/ogg.m4)
 m4_include(ac/vorbis.m4)
 m4_include(ac/flac.m4)
-m4_include(ac/ebml.m4)
-m4_include(ac/matroska.m4)
+dnl m4_include(ac/ebml.m4)
+dnl m4_include(ac/matroska.m4)
+m4_include(ac/ebml_matroska_internal.m4)
 m4_include(ac/expat.m4)
 m4_include(ac/zlib.m4)
 m4_include(ac/lzo.m4)
