@@ -8,8 +8,6 @@ License: GPL
 Group: Multimedia
 Source: %{name}-%{version}.tar.bz2
 BuildRoot: %{_tmppath}/%{name}-%{version}-tmproot
-BuildRequires: libebml-devel >= 1.2.0
-BuildRequires: libmatroska-devel >= 1.1.0
 BuildRequires: gcc-c++ gcc gcc-c++ make libogg-devel libvorbis-devel wxGTK-devel >= 2.8 boost-devel file lzo-devel bzip2-devel zlib-devel expat-devel gettext-devel ruby curl-devel
 
 %description
