@@ -3,8 +3,6 @@
 # works with openSUSE 11.4 and newer
 #
 
-BuildRequires: libebml >= 1.2.0
-BuildRequires: libmatroska >= 1.1.0
 BuildRequires: expat libexpat-devel flac flac-devel gcc-c++ gtk2 gtk2-devel libogg libogg-devel libstdc++-devel libvorbis libvorbis-devel lzo lzo-devel pkgconfig boost-devel file-devel ruby libcurl-devel
 BuildRequires: wxWidgets-devel patch make gettext-tools
 
